# tuna

./: .pre-commit-config.yaml  README.md  justfile  package-lock.json  package.json  prek.toml  pyproject.toml  setup.cfg
.github/workflows/: release.yml  tests.yml
src/tuna/: __init__.py  _helpers.py  _import_profile.py  _runtime_profile.py  cli.py  magics.py  main.py
src/tuna/web/: index.html
src/tuna/web/static/: icicle.js
tests/: foo.py  test_tuna.py
tuna/: cli.py  main.py
tuna/web/: index.html
tuna/web/static/: icicle.js
